# ACME_CMake

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
ACME/src/: Makefile.dos  _std.c  acme.c  global.c  global.h  platform.h
cmake/: ACME-CMAKE-INTEGRATION.cmake  ACME-Functions.cmake  ACME-Helpers.cmake  ACME-Source-Helpers.cmake
docs/: CMake.txt  Source.txt
